# WeatherApp

./: .gitignore  BuildWeather.bat  CMakeLists.txt  LICENSE  README.md
Include/: Application.h  AsyncData.h  Config.h  WeatherAPI.h  WeatherData.h  WeatherGUI.h
Include/imgui/: imconfig-SFML.h  imconfig.h  imgui.h
Source/: Application.cpp  Config.cpp  Main.cpp  WeatherAPI.cpp  WeatherGUI.cpp
Source/imgui/: imgui-SFML.cpp  imgui.cpp  imgui_demo.cpp  imgui_tables.cpp
